<resources>
    <string name="app_name">BMIApp</string>
    <string name="main_activity_body_mass_index">Body Mass Index</string>
    <string name="main_activity_body_mass_index_description">Body mass index (BMI) is a value derived from the mass (weight) and height of a person. The BMI is defined as the body mass divided by the square of the body height, and is expressed in units of kg/m2, resulting from mass in kilograms and height in metres.</string>
    <string name="main_activity_go_to_bmi_calculator">Go to BMI Calculator</string>
    <string name="bmi_activity_bmi_calculator_entry">Calculator</string>
    <string name="bmi_activity_height">My height (in cm)</string>
    <string name="bmi_activity_weight">My weight (in kg)</string>
    <string name="bmi_activity_clear_all_values">CLEAR ALL VALUES</string>
    <string name="bmi_activity_calculate_bmi">CALCULATE BMI</string>
    <string name="bmi_result_score">Your BMI score</string>
    <string name="bmi_result_height">your height (in cm)</string>
    <string name="bmi_result_weight">your weight (in kg)</string>
    <string name="bmi_result_your_bmi">your BMI</string>
    <string name="option_activity_rating_legend">Rating Legend</string>
    <string name="option_menu_Item_rating">Rating</string>
    <string name="option_menu_Item_home">Home</string>
    <string name="option_menu_Item_calculator">Calculator</string>
    <string name="bmi_cat_from">This categorie starts at</string>
    <string name="bmi_cat_to">and stops at</string>
    <string name="settings">Settings</string>
    <string name="set_units">Set units</string>
    <string name="create_new_user">Create new User</string>
    <string name="option_menu_Item_settings">Settings</string>
    <string name="add_user">Add User</string>
    <string name="cancel">Cancel</string>
</resources>